prometheus-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: hotel-dev
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
