prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: hotel-dev
spec:
  host: prometheus-hotel-dev.apps.inholland.hcs-lab.nl
  port:
    targetPort: 9090
  to:
    kind: Service
    name: prometheus
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
